--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ SpaceXfalconApp/SpaceXfalconApp.xcodeproj/project.xcworkspace/xcshareddata/IDEWo
 SpaceXfalconApp/SpaceXfalconApp.xcodeproj/project.xcworkspace/xcuserdata/narekmatosyan.xcuserdatad/UserInterfaceState.xcuserstate
 SpaceXfalconApp/SpaceXfalconApp.xcodeproj/project.xcworkspace/contents.xcworkspacedata
 SpaceXfalconApp/SpaceXfalconApp.xcodeproj/xcuserdata/narekmatosyan.xcuserdatad/xcschemes/xcschememanagement.plist
+SpaceXfalconApp/SpaceXfalconApp.xcodeproj/project.xcworkspace/xcuserdata/narekmatosyan.xcuserdatad/UserInterfaceState.xcuserstate
